--- a/index.html
+++ b/index.html
@@ -239,6 +239,16 @@
         </section>
 
 
+        <!--================Feature Area =================-->
+        <section class="feature_area p_120">
+          <div class="overlay bg-parallax" data-stellar-ratio="0.9" data-stellar-vertical-offset="0" data-background=""></div>
+          <div class="container">
+            <div class="row">
+              <img src="img/NV-Ramana-Letter.jpg" class="img-fluid">         
+            </div>
+          </div>
+        </section>
+
 
 
         <!--================Causes Area =================-->
@@ -252,7 +262,7 @@
                <div class="col-md-6 col-sm-6 gallery_item">
                 <div class="gallery">
                 <div class="gallery_img">
-                  <img src="img/home-gallery/tntpf1.jpg" alt="">
+                  <img src="img/home-gallery/womens-day.jpeg" alt="">
                    <div class="hover">
                      <a class="light" href="womans-day.html"><i class="fa fa-expand"></i></a>
                    </div>
@@ -477,9 +487,9 @@
               </div>
 
               <div class="col-md-6 col-sm-6">
-                  <div class="fb-page" data-href="https://www.facebook.com/tntpf1/" data-tabs="timeline" data-width="500" data-height="" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
-                  <blockquote cite="https://www.facebook.com/tntpf1/" class="fb-xfbml-parse-ignore">
-                  <a href="https://www.facebook.com/tntpf1/">Tamilnadu Telugu People Foundation</a>
+                  <div class="fb-page" data-href="https://www.facebook.com/tntpf.india.9" data-tabs="timeline" data-width="500" data-height="" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
+                  <blockquote cite="https://www.facebook.com/tntpf.india.9" class="fb-xfbml-parse-ignore">
+                  <a href="https://www.facebook.com/tntpf.india.9">Tamilnadu Telugu People Foundation</a>
                   </blockquote>
                 </div>
               </div>
