--- a/index.html
+++ b/index.html
@@ -487,11 +487,8 @@
               </div>
 
               <div class="col-md-6 col-sm-6">
-                  <div class="fb-page" data-href="https://www.facebook.com/tntpf.india.9" data-tabs="timeline" data-width="500" data-height="" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
-                  <blockquote cite="https://www.facebook.com/tntpf.india.9" class="fb-xfbml-parse-ignore">
-                  <a href="https://www.facebook.com/tntpf.india.9">Tamilnadu Telugu People Foundation</a>
-                  </blockquote>
-                </div>
+                <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Ftntpf.india.9&tabs=timeline&width=0&height=0&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="0" height="0" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+                  
               </div>
 
             </div>
